quote-app.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: nginx
  labels:
    app: quote-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged 
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: nginx-html
            - mountPath: /etc/nginx
              name: nginx-conf
      volumes:
        - name: nginx-html
          configMap:
            name: nginx-html
        - name: nginx-conf
          configMap:
            name: nginx-conf

---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: quote-service
  labels:
    app: quote-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: quote-service
    spec:
      containers:
        - name: quote-service
          image: marcnuri/chuck-norris
          ports:
            - containerPort: 8080

---
kind: Service
apiVersion: v1
metadata: 
  name: nginx-service
  labels:
    app: quote-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP

---
kind: Service
apiVersion: v1
metadata: 
  name: quoteservice
  labels:
    app: quote-app
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 8080
  selector:
    app: quote-service
  sessionAffinity: None
  type: ClusterIP
  
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx-quote
  labels:
    app: nginx-quote-app
spec:
  #host: quote.apps-crc.testing
  to:
    kind: Service
    name: nginx-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
